--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-shopping-app",
+  "name": "angular-product-management-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
